tests/baselines/reference/unusedVariablesinForLoop.errors.txt
tests/cases/compiler/unusedVariablesinForLoop.ts(2,13): error TS6133: 'i' is declared but never used.


==== tests/cases/compiler/unusedVariablesinForLoop.ts (1 errors) ====
    function f1 () {
        for(var i = 0; ;) {
                ~
!!! error TS6133: 'i' is declared but never used.
    
        }
    }